@@ -226,6 +226,7 @@ GST_START_TEST (test_message_state_changed_children)
 
   pop_messages (bus, 9);
 
+  ASSERT_OBJECT_REFCOUNT (bus, "bus", 1);
   ASSERT_OBJECT_REFCOUNT (src, "src", 1);
   ASSERT_OBJECT_REFCOUNT (sink, "sink", 1);
   ASSERT_OBJECT_REFCOUNT (pipeline, "pipeline", 1);
